# cookiecutter-simplepackage

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: CHANGES.md  Pipfile  setup.cfg
