[mypy]
namespace_packages = True
mypy_path = src

[flake8]
max-line-length = 150

[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_slug }}.VERSION
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
keywords = 
licence = {{ cookiecutter.licence }}
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package_dir = 
    =src
packages = find_namespace:
install_requires = 

[options.packages.find]
where = src
